--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="http://at.alicdn.com/t/font_1287412_l8bunrjcznp.js"></script>
   </body>
 </html>
